Fixed Formatting of completion percentage displays
Fixed formatting of completion percentage displays so that nonfinite decimals are truncated. Fixed formatting of how images are displayed in learning modules.

--- a/frontend/playground-frontend/src/App.css
+++ b/frontend/playground-frontend/src/App.css
@@ -572,8 +572,16 @@ textarea {
 }
 
 .learnImg {
-  width: 100%;
+  max-width: 100%;
   height: auto;
+  max-height: 400px;
+}
+
+#imageContainer {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .captionText {
